MyBadget Page, Service Area in worker profile

--- a/mobileapp/mobileapp/mobileapp.csproj
+++ b/mobileapp/mobileapp/mobileapp.csproj
@@ -38,6 +38,9 @@
     <EmbeddedResource Update="Views\MastDetail.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\MyBadges.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\MyPostedTasks.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
