--- a/mobileapp/mobileapp.Android/mobileapp.Android.csproj
+++ b/mobileapp/mobileapp.Android/mobileapp.Android.csproj
@@ -59,6 +59,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="PayPal.Forms">
+      <Version>2.18.3</Version>
+    </PackageReference>
     <PackageReference Include="SkiaSharp.Extended">
       <Version>1.60.0</Version>
     </PackageReference>
