--- a/mobileapp/mobileapp.iOS/mobileapp.iOS.csproj
+++ b/mobileapp/mobileapp.iOS/mobileapp.iOS.csproj
@@ -190,6 +190,9 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="PayPal.Forms">
+      <Version>2.18.3</Version>
+    </PackageReference>
     <PackageReference Include="SkiaSharp.Extended">
       <Version>1.60.0</Version>
     </PackageReference>
