--- a/mobileapp/mobileapp.iOS/mobileapp.iOS.csproj
+++ b/mobileapp/mobileapp.iOS/mobileapp.iOS.csproj
@@ -190,6 +190,9 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite">
+      <Version>2.1.2</Version>
+    </PackageReference>
     <PackageReference Include="PayPal.Forms">
       <Version>2.18.3</Version>
     </PackageReference>
@@ -201,6 +204,9 @@
     </PackageReference>
     <PackageReference Include="SkiaSharp.Views.Forms">
       <Version>1.60.3</Version>
+    </PackageReference>
+    <PackageReference Include="System.Buffers">
+      <Version>4.5.0</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.2.0.729530-pre2" />
     <PackageReference Include="Prism.Autofac.Forms" Version="7.0.0.396" />
