--- a/mobileapp/mobileapp.Android/Properties/AndroidManifest.xml
+++ b/mobileapp/mobileapp.Android/Properties/AndroidManifest.xml
@@ -1,12 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="1.0" package="com.bidontask.bidontask1" android:installLocation="auto" android:versionCode="4">
-	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="27" />
+	<uses-sdk android:minSdkVersion="23" android:targetSdkVersion="27" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
 	<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-	<application android:label="Bid On Task" android:icon="@mipmap/ic_launcher"></application>
+	<application android:label="Bid On Task" android:icon="@mipmap/ic_launcher">
+		<meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyChh-f8PulGfxyomucFrJ4jeiv1QnPo7Vo" />
+	</application>
 </manifest>
