--- a/mobileapp/mobileapp.iOS/mobileapp.iOS.csproj
+++ b/mobileapp/mobileapp.iOS/mobileapp.iOS.csproj
@@ -196,6 +196,9 @@
     <PackageReference Include="PayPal.Forms">
       <Version>2.18.3</Version>
     </PackageReference>
+    <PackageReference Include="Plugin.Permissions">
+      <Version>3.0.0.12</Version>
+    </PackageReference>
     <PackageReference Include="SkiaSharp.Extended">
       <Version>1.60.0</Version>
     </PackageReference>
@@ -208,10 +211,13 @@
     <PackageReference Include="System.Buffers">
       <Version>4.5.0</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.Essentials">
+      <Version>0.10.0-preview</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.2.0.729530-pre2" />
     <PackageReference Include="Prism.Autofac.Forms" Version="7.0.0.396" />
     <PackageReference Include="Xamarin.Forms.Maps">
-      <Version>3.1.0.697729</Version>
+      <Version>3.2.0.729530-pre2</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup />
